# wbtech_recsys_project_2024

./: .gitignore  README.md
stage_6/: .dockerignore  .env-example  .pylintrc  Makefile  README.md  docker-compose.yml  pyproject.toml
stage_6/dockerfiles/: api.Dockerfile
stage_6/notebooks/: 1 1_stage_models_for_2_stage_train.ipynb  2.1 data_preprocessing_for_2_stage_model.ipynb  2.2 lgbm_2_stage_model.ipynb  2.3 catboost_2_stage_model.ipynb  3.1 bNr_1_stage_models.ipynb  3.2 data_preprocessing_for_2_stage_model.ipynb  3.3 catboost_2_stage_model_recs.ipynb  3.4 recs_for_cold_users.ipynb  3.5 recs_analysis.ipynb  4 summary.ipynb  metrics.py  readme.md  utils.py
stage_6/notebooks/preprocessing/: images.ipynb  interactions.ipynb  items.ipynb
stage_6/src/: __init__.py
stage_6/src/api/: __init__.py  main.py
stage_6/src/api/response_models/: __init__.py
stage_6/src/api/routers/: __init__.py
stage_6/src/api/routers/data/: __init__.py
stage_6/src/api/routers/inference/: __init__.py  cold_recs.py  first_stage.py  second_stage.py
stage_6/src/api/routers/pipelines/: __init__.py  inference.py  preprocess_raw_data.py  train.py
stage_6/src/api/routers/trainning/: __init__.py  cold_recs.py  first_stage.py  second_stage.py
stage_6/src/configurations/: __init__.py  settings.py
stage_6/src/logs/: __init__.py  console_logger.py
stage_6/src/logs/handlers/: __init__.py  console_handler.py
stage_6/src/ml/: __init__.py
stage_6/src/ml/data/: __init__.py  feature_utils.py
stage_6/src/ml/models/: __init__.py  model_utils.py
stage_6/src/streamlit/: __init__.py
(+56 files in other folders)
