[project]
name = "market-recos"
version = "0.1.0"
description = ""
authors = [
    {name = "sanonesan",email = "ezcudze@gmail.com"}
]
readme = "README.md"
requires-python = "=3.11.9"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "orjson (>=3.10.14,<4.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    # "torch (>=2.5.1,<3.0.0)",
    # "torchvision (>=0.20.1,<0.21.0)",
    "pyarrow (>=18.1.0,<19.0.0)",
    "dill (>=0.3.9,<0.4.0)",
    # "transformers (>=4.48.0,<5.0.0)",
    "streamlit (>=1.41.1,<2.0.0)",
    "rectools (>=0.9.0,<0.10.0)",
    "polars (>=1.20.0,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "catboost (>=1.2.7,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
